--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheet.css" />
+    <title>npm</title>
+  </head>
+  <body>
+    <div id="top-nav">
+      <img src="/images/black-heart.png" alt="Black Heart" />
+      <p>Neverending Pun Machine</p>
+      <nav>
+        <a href="nmp-enterprise">nmp Enterprise</a>
+        <a href="products">Products</a>
+        <a href="solutions">Solutions</a>
+        <a href="resources">Resources</a>
+        <a href="docs">Docs</a>
+        <a href="support">Support</a>
+      </nav>
+    </div>
+    <div id="search-bar">
+      <a href="npm">npm</a>
+      <form action="look-database">
+        <input type="text" placeholder="Search packages" />
+        <button type="submit">Search</button>
+      </form>
+      <button type="submit">Join</button>
+      <a href="login">Log in</a>
+    </div>
+    <div id="main">
+      <h1>Build amazing things</h1>
+      <p></p>
+      <button type="submit">See plans</button>
+      <button type="submit">Join for free</button>
+    </div>
+  </body>
+</html>
