ajout des svg files

--- a/index.html
+++ b/index.html
@@ -21,19 +21,79 @@
       </nav>
     </div>
     <div id="search-bar">
-      <a href="npm">npm</a>
+      <img src="/images/npm-logo.png" alt="nmp logo" />
       <form action="look-database">
         <input type="text" placeholder="Search packages" />
         <button type="submit">Search</button>
       </form>
-      <button type="submit">Join</button>
+      <a href="login">Join</a>
       <a href="login">Log in</a>
     </div>
     <div id="main">
       <h1>Build amazing things</h1>
-      <p></p>
-      <button type="submit">See plans</button>
-      <button type="submit">Join for free</button>
+      <p>
+        Essential JavaScript development tools that help you go to market faster
+        and build powerful applications using modern open source code.
+      </p>
+      <a href="see-plans">See plans</a>
+      <a href="join-for-free">Join for free</a>
+    </div>
+    <div id="haxagon">
+      <object
+        data="/images/triangle-hexagon.svg"
+        width="200"
+        height="200"
+      ></object>
+    </div>
+    <div id="philosophy">
+      <h2>Bring the best of open source to your company</h2>
+      <p>
+        npm is the tool used by over 11,000,000 JavaScript developers around the
+        world. Your developers already use it. Your company depends on it.
+        Create an Org and get more out of the tools your team already knows and
+        loves.
+      </p>
+    </div>
+    <div id="options">
+      <ul>
+        <object
+          data="/images/zero-configuration.svg"
+          width="30"
+          height="30"
+        ></object>
+        <li>Zero configuration</li>
+        <p>
+          Create an org, add your team, and start collaborating. Nothing to
+          configure, set up, or manage.
+        </p>
+        <object
+          data="/images/team-management.svg"
+          width="30"
+          height="30"
+        ></object>
+        <li>Team management</li>
+        <p>
+          Team management Control who has access to what modules within your
+          team namespace using straightforward team management capabilities.
+        </p>
+        <object
+          data="/images/familiar-features.svg"
+          width="30"
+          height="30"
+        ></object>
+        <li>Familiar features</li>
+        <p>
+          Familiar features npm Orgs has 100% parity with all the public npm
+          registry features your developers already use.
+        </p>
+        <object data="/images/npm-audit.svg" width="30" height="30"></object>
+        <li>npm audit</li>
+        <p>
+          npm audit Enjoy the security auditing features built into the npm
+          client, a zero-friction way to make open source software safer.
+        </p>
+      </ul>
+      <a href="create-org">Create an Org</a>
     </div>
   </body>
 </html>
